# serial

./: CMakeLists.txt  serialConfig.cmake.in
include/serial/: serial.h
include/serial/impl/: unix.h  win.h
src/: serial.cc
src/impl/: unix.cc  win.cc
src/impl/list_ports/: list_ports_linux.cc
